# remarkable_todoist

./: .gitignore  BLOG.md  BUILD.md  CMakeLists.txt  QUICK_BUILD.txt  README.md  build-desktop.sh  build-remarkable.sh  build-rm.sh  build.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-task-display/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-sync-task-completion/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-task-creation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmake/: remarkable.cmake
launcher/: README.md  install.sh  todoist-launcher.service  todoist-launcher.sh
oxide/: README.md  install.sh  remarkable-todoist.json
qml/: AddTaskScreen.qml  DrawingCanvas.qml  SimpleKeyboard.qml  TaskDelegate.qml  main.qml  qml.qrc
scripts/: install-dev-tools.sh  pull-sysroot.sh  setup-rm-toolchain.sh
src/: main.cpp
src/config/: settings.cpp  settings.h
src/controllers/: appcontroller.cpp  appcontroller.h
src/models/: sync_queue.cpp  sync_queue.h  task.cpp  task.h  taskmodel.cpp  taskmodel.h
src/network/: sync_manager.cpp  sync_manager.h  todoist_client.cpp  todoist_client.h
src/ocr/: handwriting_recognizer.cpp  handwriting_recognizer.h
src/views/: taskdelegate.cpp  taskdelegate.h  tasklistview.cpp  tasklistview.h
tools/: build-inotify-tools.sh  inotifywait.c
